# perennia-reference-app

./: .env.example  .gitignore  CRUD_API.md  CRUD_INTEGRATION.md  README.md  SEARCH_AND_FILES.md
backend/: pyproject.toml
backend/app/: deps.py  entities.py  hooks.py  mailer.py  main.py  schemas.py
backend/app/api/: administration.py  auth.py  crud.py  crud_bulk.py  files.py  home.py  profile.py  reports.py  search.py
backend/app/config/: errors.py  settings.py
backend/app/models/: __init__.py  files.py  search.py
backend/app/permissions/: definitions.py
backend/scripts/: generate_schema_sql.py  init_db.py  seed_demo_data.py
backend/sql/: schema.sql  seed_crud_data.sql  test_data.sql
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: AlertBanner.vue  NavBar.vue  PermissionChip.vue  ResourceCrudPage.vue
frontend/src/composables/: useCrudResource.js
frontend/src/config/: entities.js
frontend/src/pages/: AccessDeniedPage.vue  AdministrationPage.vue  ClientsPage.vue  FilesPage.vue  ForgotPasswordPage.vue  HomePage.vue  LandingPage.vue  LoginPage.vue  ProductsPage.vue  ProfilePage.vue  QuotationsPage.vue  RawMaterialsPage.vue  RegisterPage.vue  ReportsPage.vue  ResetPasswordPage.vue  SearchPage.vue  SuppliersPage.vue  VerifyEmailPage.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  errors.js
frontend/src/state/: auth.js
frontend/src/styles/: components.css  theme.css  tokens.css
